--- a/hw2-app/templates/index.html
+++ b/hw2-app/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>ECS 162 Project 1</title>
-        <link rel = "stylesheet" href = "style.css">
+        <link rel = "stylesheet" href = "../static/style.css">
 
     </head>
 
@@ -33,7 +33,7 @@
         <section>
             <div class = "row-element-1">
                 <div class="row1col left-col">
-                    <span><img src = "images/NYT_Basketball.png" class="basketball-img" alt="Basketball Image"></span>
+                    <span><img src = "../static/images/NYT_Basketball.png" class="basketball-img" alt="Basketball Image"></span>
                     <br>
                     <h2 class="thin-h2 top-row">
                         Excepteur sint occaecat cupidatat non proident
@@ -53,28 +53,29 @@
                 </div>
 
                 <div class="row1col center-col">
-                    <h2 class="articleHeader">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua</h2>
+                    <a class="center-col-link"><img id="center-col-image" src="" width="" height=""></a>
+                    <a class="center-col-link"><h2 id="center-col1-header" class="articleHeader">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua</h2></a>
                     <br>
-                    <p class="center-col">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                    <p id="center-col1" class="center-col">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
                         ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
                         ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
                         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
                         sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
                         est laborum.
                     </p>
-                    <br>
-                    <p class="center-col">
+                    <!-- <br>
+                    <p id="center-col2" class="center-col">
                         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
                         nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
                         deserunt mollit anim id est laborum.
-                    </p>
+                    </p> -->
                     <hr class = "hr-center">
-                    <img src="images/NYT_Building.png" class="building-img" alt="Building Image">
-                    <h3 class="center-bottom">
+                    <a class="center-bottom-link"><img id="center-bottom-image"></a>
+                    <a class="center-bottom-link"><h2 id="center-bottom-header" class="center-bottom">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                    </h3>
-                    <p class="center-bottom">
+                    </h2></a>
+                    <p id="center-bottom" class="center-bottom">
                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
                         commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
                         dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
@@ -82,7 +83,7 @@
                     </p>
                 </div>
                 <div class="row1col right-col">
-                    <span><img src = "images/NYT_Food.png" class="food-img" alt="Food Image"></span>  
+                    <span><img src = "../static/images/NYT_Food.png" class="food-img" alt="Food Image"></span>  
                     <h2 class="thin-h2  top-row">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                         labore et dolore magna aliqua.</p>
@@ -103,6 +104,6 @@
             <br>
             <hr class="footer">
         </footer>
-        <script src = "script.js"></script>
+        <script src = "../static/main.js"></script>
     </body>
 </html>
