Populate with Davis News + Clean Up

--- a/hw2-app/templates/index.html
+++ b/hw2-app/templates/index.html
@@ -33,37 +33,43 @@
         <section>
             <div class = "row-element-1">
                 <div class="row1col left-col">
-                    <span><img src = "../static/images/NYT_Basketball.png" class="basketball-img" alt="Basketball Image"></span>
+                    <!-- <span><img src = "../static/images/NYT_Basketball.png" class="basketball-img" alt="Basketball Image"></span> -->
+                    <a class="left-col-link"><img id="left-col-image" src="" width="" height=""></a>
+
                     <br>
-                    <h2 class="thin-h2 top-row">
+                    <a class="thin-h2 top-row">
+                        <h2 id="left-col1-header">
                         Excepteur sint occaecat cupidatat non proident
-                    </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                        labore et dolore magna aliqua.
-                    </p>
+                        </h2>
+                    </a>
+
+                    <a>
+                        <p id="left-col1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                            labore et dolore magna aliqua.
+                        </p>
+                    </a>
                     <hr class = "hr-left">
-                    <h2 class = "tablet-remove thin-h2">
-                        Ut enim ad minim veniam, quis nostrud exercitation 
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat
-                    </h2>
-                    <p class = "tablet-remove">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                        labore et dolore magna aliqua. 
-                    </p>
+
+                    <a class="left-bottom-link"><img id="left-bottom-image" src="" width="" height=""></a>
+                    <a class = "tablet-remove thin-h2">
+                        <h2 id="left-bottom-header">
+                            Ut enim ad minim veniam, quis nostrud exercitation 
+                            ullamco laboris nisi ut aliquip ex ea commodo consequat
+                        </h2>
+                    </a>
+                    <a class = "tablet-remove">
+                        <p id="left-bottom">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                            labore et dolore magna aliqua. 
+                        </p>
+                    </a>
                 </div>
 
                 <div class="row1col center-col">
                     <a class="center-col-link"><img id="center-col-image" src="" width="" height=""></a>
-                    <a class="center-col-link"><h2 id="center-col1-header" class="articleHeader">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua</h2></a>
+                    <a class="center-col-link"><h2 id="center-col1-header" class="articleHeader"></h2></a>
                     <br>
-                    <p id="center-col1" class="center-col">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
-                        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
-                        est laborum.
-                    </p>
+                    <p id="center-col1" class="center-col"></p>
                     <!-- <br>
                     <p id="center-col2" class="center-col">
                         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
