Added 3rd Col Stories

--- a/hw2-app/templates/index.html
+++ b/hw2-app/templates/index.html
@@ -33,35 +33,24 @@
         <section>
             <div class = "row-element-1">
                 <div class="row1col left-col">
-                    <!-- <span><img src = "../static/images/NYT_Basketball.png" class="basketball-img" alt="Basketball Image"></span> -->
                     <a class="left-col-link"><img id="left-col-image" src="" width="" height=""></a>
 
                     <br>
                     <a class="thin-h2 top-row">
-                        <h2 id="left-col1-header">
-                        Excepteur sint occaecat cupidatat non proident
-                        </h2>
+                        <h2 id="left-col1-header"></h2>
                     </a>
 
                     <a>
-                        <p id="left-col1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                            labore et dolore magna aliqua.
-                        </p>
+                        <p id="left-col1"></p>
                     </a>
                     <hr class = "hr-left">
 
                     <a class="left-bottom-link"><img id="left-bottom-image" src="" width="" height=""></a>
                     <a class = "tablet-remove thin-h2">
-                        <h2 id="left-bottom-header">
-                            Ut enim ad minim veniam, quis nostrud exercitation 
-                            ullamco laboris nisi ut aliquip ex ea commodo consequat
-                        </h2>
+                        <h2 id="left-bottom-header"></h2>
                     </a>
                     <a class = "tablet-remove">
-                        <p id="left-bottom">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                            labore et dolore magna aliqua. 
-                        </p>
+                        <p id="left-bottom"></p>
                     </a>
                 </div>
 
@@ -70,39 +59,29 @@
                     <a class="center-col-link"><h2 id="center-col1-header" class="articleHeader"></h2></a>
                     <br>
                     <p id="center-col1" class="center-col"></p>
-                    <!-- <br>
-                    <p id="center-col2" class="center-col">
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
-                        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
-                        deserunt mollit anim id est laborum.
-                    </p> -->
                     <hr class = "hr-center">
                     <a class="center-bottom-link"><img id="center-bottom-image"></a>
-                    <a class="center-bottom-link"><h2 id="center-bottom-header" class="center-bottom">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                    </h2></a>
-                    <p id="center-bottom" class="center-bottom">
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
-                        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
-                        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                        culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
+                    <a class="center-bottom-link"><h2 id="center-bottom-header" class="center-bottom"></h2>
+                    </a>
+                    <p id="center-bottom" class="center-bottom"></p>
                 </div>
                 <div class="row1col right-col">
-                    <span><img src = "../static/images/NYT_Food.png" class="food-img" alt="Food Image"></span>  
-                    <h2 class="thin-h2  top-row">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                        labore et dolore magna aliqua.</p>
+                    <a class="right-top-link"><img id="right-top-image"></a>
+                    <a class="thin-h2  top-row">
+                        <h2 id="right-top-header"></h2>
+                    </a>
+                    <a>
+                        <p id="right-top"></p>
+                    </a>
+
                     <hr class = "hr-right">
-                    <h2 class = "tablet-remove thin-h2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                        labore et dolore magna aliqua
-                    </h2>
-                    <p class = "tablet-remove">
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
-                        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-                        eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
-                        deserunt mollit anim id est laborum.
-                    </p>
+                    <a class="right-bottom-link"><img id="right-bottom-image"></a>
+                    <a class = "tablet-remove thin-h2"> 
+                        <h2 id="right-bottom-header"></h2>
+                    </a>
+                    <a class = "tablet-remove">
+                        <p id="right-bottom"></p>
+                    </a>
                 </div>
             </div>
         </section>
