--- a/hw2-app/templates/index.html
+++ b/hw2-app/templates/index.html
@@ -33,7 +33,7 @@
         <section>
             <div class = "row-element-1">
                 <div class="row1col left-col">
-                    <a class="left-col-link"><img id="left-col-image" src="" width="" height=""></a>
+                    <!-- <a class="left-col-link"><img id="left-col-image" src="" width="" height=""></a>
 
                     <br>
                     <a class="thin-h2 top-row">
@@ -51,11 +51,11 @@
                     </a>
                     <a class = "tablet-remove">
                         <p id="left-bottom"></p>
-                    </a>
+                    </a> -->
                 </div>
 
                 <div class="row1col center-col">
-                    <a class="center-col-link"><img id="center-col-image" src="" width="" height=""></a>
+                    <!-- <a class="center-col-link"><img id="center-col-image" src="" width="" height=""></a>
                     <a class="center-col-link"><h2 id="center-col1-header" class="articleHeader"></h2></a>
                     <br>
                     <p id="center-col1" class="center-col"></p>
@@ -63,10 +63,10 @@
                     <a class="center-bottom-link"><img id="center-bottom-image"></a>
                     <a class="center-bottom-link"><h2 id="center-bottom-header" class="center-bottom"></h2>
                     </a>
-                    <p id="center-bottom" class="center-bottom"></p>
+                    <p id="center-bottom" class="center-bottom"></p> -->
                 </div>
                 <div class="row1col right-col">
-                    <a class="right-top-link"><img id="right-top-image"></a>
+                    <!-- <a class="right-top-link"><img id="right-top-image"></a>
                     <a class="thin-h2  top-row">
                         <h2 id="right-top-header"></h2>
                     </a>
@@ -81,7 +81,7 @@
                     </a>
                     <a class = "tablet-remove">
                         <p id="right-bottom"></p>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </section>
