added nyt dev logo branding to footer

--- a/hw2-app/templates/index.html
+++ b/hw2-app/templates/index.html
@@ -88,6 +88,7 @@
         <footer>
             <br>
             <hr class="footer">
+            <a href="https://developer.nytimes.com"><img src="../static/images/poweredby_nytimes_200a.png" width = 200px></a>
         </footer>
         <script src = "../static/main.js"></script>
     </body>
