--- a/hw2-app/templates/index.html
+++ b/hw2-app/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
     <head>
         <meta charset="UTF-8">
-        <title>ECS 162 Project 1</title>
+        <title>The New York Times</title>
         <link rel = "stylesheet" href = "../static/style.css">
 
     </head>
