--- a/hw2-app/static/style.css
+++ b/hw2-app/static/style.css
@@ -286,7 +286,7 @@ li{
 }
 
 .grid-element{
-    height: 600px;
+    /* height: 600px; */
     display: flex;
     flex-direction: column;
     overflow: hidden;
