--- a/hw2-app/templates/index.html
+++ b/hw2-app/templates/index.html
@@ -24,7 +24,7 @@
                     <p id="formattedDate"></p>
                     <p class="today">Today's Paper</p>
                 </div>
-                <div class="header-center"><h1 class = "title">The New York Times</h1></div>
+                <div class="header-center"><a href="https://nytimes.com"><h1 class = "title">The New York Times</h1></a></div>
                 <div class="header-right"></div>
             </div>
 
