changed a couple comments and removed some junk from index

--- a/hw2-app/templates/index.html
+++ b/hw2-app/templates/index.html
@@ -31,61 +31,13 @@
             <hr class="header-border">
         </header>
         <section>
-<!-- comment/uncomment row-element-1 for grid-container and grid -->
-            <!-- <div class = "row-element-1"> -->
             <div class="grid-container">
                 <div class="grid">
-                    <div class="row1col left-col">
-                        <!-- <a class="left-col-link"><img id="left-col-image" src="" width="" height=""></a>
+                    <div class="row1col left-col"></div>
     
-                        <br>
-                        <a class="thin-h2 top-row">
-                            <h2 id="left-col1-header"></h2>
-                        </a>
-    
-                        <a>
-                            <p id="left-col1"></p>
-                        </a>
-                        <hr class = "hr-left">
-    
-                        <a class="left-bottom-link"><img id="left-bottom-image" src="" width="" height=""></a>
-                        <a class = "tablet-remove thin-h2">
-                            <h2 id="left-bottom-header"></h2>
-                        </a>
-                        <a class = "tablet-remove">
-                            <p id="left-bottom"></p>
-                        </a> -->
-                    </div>
-    
-                    <div class="row1col center-col">
-                        <!-- <a class="center-col-link"><img id="center-col-image" src="" width="" height=""></a>
-                        <a class="center-col-link"><h2 id="center-col1-header" class="articleHeader"></h2></a>
-                        <br>
-                        <p id="center-col1" class="center-col"></p>
-                        <hr class = "hr-center">
-                        <a class="center-bottom-link"><img id="center-bottom-image"></a>
-                        <a class="center-bottom-link"><h2 id="center-bottom-header" class="center-bottom"></h2>
-                        </a>
-                        <p id="center-bottom" class="center-bottom"></p> -->
-                    </div>
-                    <div class="row1col right-col">
-                        <!-- <a class="right-top-link"><img id="right-top-image"></a>
-                        <a class="thin-h2  top-row">
-                            <h2 id="right-top-header"></h2>
-                        </a>
-                        <a>
-                            <p id="right-top"></p>
-                        </a>
-    
-                        <hr class = "hr-right">
-                        <a class="right-bottom-link"><img id="right-bottom-image"></a>
-                        <a class = "tablet-remove thin-h2"> 
-                            <h2 id="right-bottom-header"></h2>
-                        </a>
-                        <a class = "tablet-remove">
-                            <p id="right-bottom"></p>
-                        </a> -->
-                    </div>
+                    <div class="row1col center-col"></div>
+
+                    <div class="row1col right-col"></div>
                 </div>
             </div>
         </section>
